# ecommerce_ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260524_001_create_commerce_ops_p0_schema.sql  20260524_002_harden_commerce_ops_helper_function.sql  20260524_003_p0_closure_security_and_idempotency.sql  20260526_004_add_commerce_ops_p1_operator_schema.sql  20260607_005_add_commerce_ops_p2_backend_schema.sql  20260608_006_add_commerce_ops_p3_runtime_hardening.sql  20260608_007_add_true_agent_fields_for_inventory_fraud_pricing.sql  20260612_008_expand_agent_run_agent_types.sql
apps/api/app/: __init__.py
apps/api/app/core/: app.py  authz.py  celery_app.py  db.py  errors.py  idempotency.py  logging.py  middleware.py  permissions.py  redaction.py  responses.py  runtime.py  secret_store.py  security.py  settings.py
apps/api/app/integrations/: shopify.py  supabase_auth.py
apps/api/app/llm/: provider.py
apps/api/app/modules/: approvals.py  auth.py  catalog.py  dashboard.py  notifications.py  organizations.py  stores.py  sync.py  users.py
apps/api/app/repositories/: approval_repository.py  base.py  catalog_repository.py  fraud_repository.py  idempotency_repository.py  inventory_repository.py  models.py  notification_repository.py  oauth_repository.py  organization_repository.py  policy_repository.py  pricing_repository.py  runtime_repository.py  (+5 more)
apps/api/tests/: conftest.py
(+249 files in other folders)
