[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commerceops-api"
version = "0.1.0"
description = "CommerceOps AI P0 backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "celery[redis]>=5.4.0",
  "cryptography>=45.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "langgraph>=0.2.60",
  "openai>=1.84.0",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.6.1",
  "pydantic[email]>=2.10.4",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-mock>=3.14.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.11.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
